terraform/Grupos_Seguridad.tf
resource "aws_security_group" "grupo_seguridad_servidor" {
  vpc_id      = aws_vpc.principal.id
  name        = "grupo-seguridad-servidor"
  description = "Grupo de seguridad para servidor web"

  # Regla de entrada para HTTP
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Acceso HTTP desde cualquier origen"
  }
  # Regla de entrada para SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Acceso SSH desde cualquier origen"
  }
  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Acceso JSON-SERVER"
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Acceso HTTPS desde cualquier origen"
  }
  ingress {
    from_port   = 389
    to_port     = 389
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Acceso LDAP desde cualquier origen"
  }
  # Regla de salida para todo el trafico
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Permite todo el trafico de salida"
  }

  tags = {
    Name = "GrupoSeguridadServidor"
  }
}
